# fabelio-price-tracker

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  tasks.py
fabelio_price_tracker/app/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
fabelio_price_tracker/price_tracker/: apps.py  forms.py  helpers.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  views.py
fabelio_price_tracker/price_tracker/migrations/: 0001_initial.py  0002_auto_20200515_2359.py
fabelio_price_tracker/price_tracker/templates/: base.html
fabelio_price_tracker/price_tracker/templates/price_tracker/: add_product.html  product_detail.html  product_list.html
tests/behave/features/: price-tracker.feature
tests/behave/steps/: price_tracker.py
